--- a/index.html
+++ b/index.html
@@ -40,17 +40,23 @@
         </div>
         <div class="preselect">
             <ul class="lista_preselect">
-                <li>
+                <li class="preselect_links">
                     <!--Select de moneda-->
-                    <input type="select">
+                    <b class="text_moneda">Moneda</b>
+                    <select class="select_moneda" size="1" name="Moneda">
+                        <option value="1" selected>$</option>
+                        <option value="2">U$D</option>
+                    </select>
                 </li>
-                <li>
+                <li class="preselect_links">
+                    <div>
+                        <img src="./Assets/Images/dark.png" class="img_dark container_dark">
+                    </div>
                     <!--Select de modo dia/noche-->
-
                 </li>
-                <li>
+                <li class="">
                     <!--Link al perfil-->
-                    <a href=""><!--<img src="./Assets/Images/profile-blue.png" />--></a>
+                    <a href=""><img src="./Assets/Images/profile.png" class="nav_img_profile" /></a>
                 </li>
             </ul>
         </div>
