Avance de noticias e historia

--- a/index.html
+++ b/index.html
@@ -50,15 +50,61 @@
                 </li>
                 <li class="preselect_links">
                     <div>
-                        <img src="./Assets/Images/dark.png" class="img_dark container_dark">
+                        <a href=""><img src="./Assets/Images/dark.png" class="img_dark container_dark"></a>
+                        <a href=""><img src="./Assets/Images/light.png" class="img_light container_light"></a>
                     </div>
-                    <!--Select de modo dia/noche-->
+
                 </li>
                 <li class="">
                     <!--Link al perfil-->
                     <a href=""><img src="./Assets/Images/profile.png" class="nav_img_profile" /></a>
                 </li>
             </ul>
+        </div>
+    </div>
+
+    <div id="noticias">
+        <!--Division de noticias-->
+        <h1 class="titulo_noticias">
+            Ultimas noticias
+        </h1>
+        <h3 class="act_noticias">
+            Noticias actualizadas el dia 15/06/22
+        </h3>
+
+        <div>
+            <div id="noticia1">
+                <p>La reserva se coloca como lider a falta de dos fechas del torneo local!</p>
+                <img src="" class="img_noticia" />
+                <button type="button" name="Leer noticia 1">Leer Más</button>
+            </div>
+            <div id="noticia2">
+                <p>El presidente del club llego a un acuerdo con Binance como patrocinador oficial.</p>
+                <img src="" class="img_noticia" />
+                <button type="button" name="Leer noticia 2">Leer Más</button>
+            </div>
+            <div id="noticia3">
+                <p>Se realizara un torneo internacional en las instalaciones de padel del club.</p>
+                <img src="" class="img_noticia" />
+                <button type="button" name="Leer noticia 3">Leer Más</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="nosotros">
+        <h1 class="titulo_historia">Nuestra historia</h1>
+        <div>
+            <table>
+                <tr>
+                    <td class="col_historia">
+                        <p class="texto_historia">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ullam, magni dolores, veniam illum excepturi alias eum dolore corrupti temporibus ea fugit odio voluptatem harum pariatur nostrum ducimus laborum molestias?</p>
+                    </td>
+                    <td class="col_historia">
+                        <p class="texto_historia">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam harum quos quasi necessitatibus. Voluptas quibusdam, sunt omnis blanditiis ratione sed nulla debitis. Repudiandae at, aspernatur blanditiis obcaecati laudantium
+                            culpa sequi!</p>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 
