Comienzo de noticias

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body id="top" class="body_light">
@@ -66,17 +67,24 @@
     <div id="noticias">
         <!--Division de noticias-->
         <h1 class="titulo_noticias">
-            Ultimas noticias
+            Últimas noticias
         </h1>
         <h3 class="act_noticias">
             Noticias actualizadas el dia 15/06/22
         </h3>
 
-        <div>
+        <div id="noticias_portadas">
             <div id="noticia1">
-                <p>La reserva se coloca como lider a falta de dos fechas del torneo local!</p>
-                <img src="" class="img_noticia" />
-                <button type="button" name="Leer noticia 1">Leer Más</button>
+                <div class="img_noticia_centrada">
+                    <img src="./Assets/Images/reserva-portada.jpeg" class="img_noticia_portada" />
+                </div>
+                <p class="noticia_titulo1">
+                    La reserva se coloca como lider a falta de dos fechas del torneo local!
+                    <br/>
+                </p>
+                <p class="noticia_boton">
+                    <a href="" class=""><button type="button" name="Leer noticia 1" class="boton_color boton_pos">Leer más</button></a>
+                </p>
             </div>
             <div id="noticia2">
                 <p>El presidente del club llego a un acuerdo con Binance como patrocinador oficial.</p>
