--- a/index.html
+++ b/index.html
@@ -78,23 +78,37 @@
                 <div class="img_noticia_centrada">
                     <img src="./Assets/Images/reserva-portada.jpeg" class="img_noticia_portada" />
                 </div>
-                <p class="noticia_titulo1">
+                <p class="noticia_titulo">
                     La reserva se coloca como lider a falta de dos fechas del torneo local!
                     <br/>
                 </p>
                 <p class="noticia_boton">
-                    <a href="" class=""><button type="button" name="Leer noticia 1" class="boton_color boton_pos">Leer más</button></a>
+                    <a href="" class=""><button type="button" name="Leer noticia 1" class="boton_color2 boton_pos">Leer más</button></a>
                 </p>
             </div>
             <div id="noticia2">
-                <p>El presidente del club llego a un acuerdo con Binance como patrocinador oficial.</p>
-                <img src="" class="img_noticia" />
-                <button type="button" name="Leer noticia 2">Leer Más</button>
+                <div class="img_noticia_centrada">
+                    <img src="./Assets/Images/binance.jpg" class="img_noticia_portada" />
+                </div>
+                <p class="noticia_titulo">
+                    El presidente del club llego a un acuerdo con Binance como su patrocinador oficial.
+                    <br/>
+                </p>
+                <p class="noticia_boton">
+                    <a href="" class=""><button type="button" name="Leer noticia 2" class="boton_color2 boton_pos">Leer más</button></a>
+                </p>
             </div>
             <div id="noticia3">
-                <p>Se realizara un torneo internacional en las instalaciones de padel del club.</p>
-                <img src="" class="img_noticia" />
-                <button type="button" name="Leer noticia 3">Leer Más</button>
+                <div class="img_noticia_centrada">
+                    <img src="./Assets/Images/padel-noticia.jpeg" class="img_noticia_portada" />
+                </div>
+                <p class="noticia_titulo">
+                    Se realizará un torneo internacional de padel en las instalaciones del club.
+                    <br/>
+                </p>
+                <p class="noticia_boton">
+                    <a href="" class=""><button type="button" name="Leer noticia 1" class="boton_color3 boton_pos">Leer más</button></a>
+                </p>
             </div>
         </div>
     </div>
