Avance con pagina principal, footer e historia

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
             <div id="noticia3">
                 <div class="img_noticia_centrada">
-                    <img src="./Assets/Images/padel-noticia.jpeg" class="img_noticia_portada" />
+                    <img src="./Assets/Images/padel-portada.jpg" class="img_noticia_portada" />
                 </div>
                 <p class="noticia_titulo">
                     Se realizará un torneo internacional de padel en las instalaciones del club.
@@ -117,21 +117,40 @@
         <h1 class="titulo_historia">Nuestra historia</h1>
         <div>
             <table>
-                <tr>
+                <tr class="fila_historia">
                     <td class="col_historia">
-                        <p class="texto_historia">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ullam, magni dolores, veniam illum excepturi alias eum dolore corrupti temporibus ea fugit odio voluptatem harum pariatur nostrum ducimus laborum molestias?</p>
+                        <p class="texto_historia">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas exercitationem ex laboriosam vitae, quidem facilis ducimus mollitia officiis sint impedit labore sunt suscipit odio voluptates id illo animi? Vitae, accusamus.</p>
                     </td>
                     <td class="col_historia">
-                        <p class="texto_historia">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam harum quos quasi necessitatibus. Voluptas quibusdam, sunt omnis blanditiis ratione sed nulla debitis. Repudiandae at, aspernatur blanditiis obcaecati laudantium
-                            culpa sequi!</p>
+                        <p class="texto_historia">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam eligendi animi itaque exercitationem incidunt maxime delectus, laboriosam tempore fuga dolore sed soluta dolor consectetur inventore vitae asperiores maiores consequatur
+                            laborum?
+                        </p>
                     </td>
                 </tr>
             </table>
+            <div>
+
+            </div>
         </div>
     </div>
 
 
-    <footer id="footer_light">
-
-    </footer>
+    <div class="footer_light">
+        <div class="redes">
+            <ul class="listaRedes">
+                <li class="nombreRedes">
+                    <h1 class="tituloFooter">WE, TOGETHER</h1>
+                </li>
+                <li class="itemRedes">
+                    <a href="mailto:jeremiassappia@gmail.com"><img class="imgMail" src="assets/images/mail.png" /></a>
+                </li>
+                <li class="itemRedes">
+                    <a href="https://github.com/sappiajeremias" target="_blank"><img class="imgGit" src="assets/images/git.jpg" /></a>
+                </li>
+                <li class="itemRedes">
+                    <a href="https://www.linkedin.com/in/jeremias-sappia-a83028214/" target="_blank"><img class="imglinkedin" src="assets/images/linkedin.png" /></a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
