Comienzo de pagina de equipo

--- a/index.html
+++ b/index.html
@@ -17,17 +17,11 @@
             <ul class="lista_links">
                 <li class="">
                     <!--Link al tope de la pagina-->
-                    <a href="#top"><img src="./Assets/Images/Logo-sin-wt .png" class="nav_img" /></a>
-                </li>
-                <li class="item_links">
-                    <!--Link al catalogo-->
-                    <a href="" class="underline_links">
-                        <p class="nav_text">PRODUCTOS</p>
-                    </a>
+                    <a href="index.html"><img src="./Assets/Images/Logo-sin-wt .png" class="nav_img" /></a>
                 </li>
                 <li class="item_links">
                     <!--Link al equipo-->
-                    <a href="" class="underline_links">
+                    <a href="Ventanas/equipo.html" class="underline_links">
                         <p class="nav_text">EQUIPO</p>
                     </a>
                 </li>
@@ -37,29 +31,23 @@
                         <p class="nav_text">POSICION</p>
                     </a>
                 </li>
+                <li class="item_links">
+                    <!--Link al perfil-->
+                    <a href="" class="underline_links">
+                        <p class="nav_text">PERFIL</p>
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="preselect">
             <ul class="lista_preselect">
                 <li class="preselect_links">
-                    <!--Select de moneda-->
-                    <b class="text_moneda">Moneda</b>
-                    <select class="select_moneda" size="1" name="Moneda">
-                        <option value="1" selected>$</option>
-                        <option value="2">U$D</option>
-                    </select>
+                    <a href=""><img src="./Assets/Images/dark.png" class="img_dark container_dark"></a>
                 </li>
                 <li class="preselect_links">
-                    <div>
-                        <a href=""><img src="./Assets/Images/dark.png" class="img_dark container_dark"></a>
-                        <a href=""><img src="./Assets/Images/light.png" class="img_light container_light"></a>
-                    </div>
+                    <a href=""><img src="./Assets/Images/light.png" class="img_light container_light"></a>
+                </li>
 
-                </li>
-                <li class="">
-                    <!--Link al perfil-->
-                    <a href=""><img src="./Assets/Images/profile.png" class="nav_img_profile" /></a>
-                </li>
             </ul>
         </div>
     </div>
@@ -114,17 +102,34 @@
     </div>
 
     <div id="nosotros">
-        <h1 class="titulo_historia">Nuestra historia</h1>
+        <h1 class="titulo_historia">WE, TOGETHER</h1>
         <div>
             <table>
-                <tr class="fila_historia">
+                <tr class="fila_titulos">
                     <td class="col_historia">
-                        <p class="texto_historia">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas exercitationem ex laboriosam vitae, quidem facilis ducimus mollitia officiis sint impedit labore sunt suscipit odio voluptates id illo animi? Vitae, accusamus.</p>
+                        <h2 class="titulo_texto_historia">Nuestra historia</h2>
                     </td>
                     <td class="col_historia">
-                        <p class="texto_historia">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam eligendi animi itaque exercitationem incidunt maxime delectus, laboriosam tempore fuga dolore sed soluta dolor consectetur inventore vitae asperiores maiores consequatur
-                            laborum?
+                        <h2 class="titulo_texto_disciplinas">Otras Disciplinas</h2>
+                    </td>
+                </tr>
+                <tr class="fila_historia">
+                    <td class="col_historia">
+
+                        <p class="texto_historia">Con su ubicación en la ciudad de Neuquén, Argentina, el Club Atlético We,Together se posiciona como uno de los clubes mas importantes del país como tambien es uno de los mas nuevos. Fundado en 2012 por su actual presidente Jeremías
+                            Sappia, "el witu", como lo llaman sus aficionados, no hace mas que competir en todos los torneos en los que participa . <br><br>Actualmente el equipo de primera división de fútbol esta peleando por el puesto de clasificación
+                            al reducido de la Primera Nacional (segunda división). En 2016, el equipo se consagró campeón de la Copa Argentina, derrotando por penales al histórico River Plate de Marcelo Gallardo. Y desde ese momento el equipo se encuentra
+                            luchando por el ascenso a primera división.
                         </p>
+                    </td>
+                    <td class="col_historia">
+
+                        <p class="texto_historia">El club no solo se destaca en el fútbol, sino que también se encuentra en varias disciplinas mas. Algunas de estas son: </p>
+                        <h3 class="titulo_disciplinas">Handball: </h3>
+                        <p class="texto_historia">Participando en la liga FeMeBal (Federación Metropolitana de Balonmano) y siendo uno de los favoritos al título, el equipo masculino de handball lleva 3 campeonatos en los últimos 5 años.</p>
+                        <h3 class="titulo_disciplinas">Padel: </h3>
+                        <p class="texto_historia">Uno de los puntos fuertes del club, el padel fue el segundo deporte que consiguió su lugar en el club y desde ese momento han salido de su escuela varios jugadores que hoy son profesionales, como por ejemplo, Agustín Tapia y Martín
+                            Di Nenno.</p>
                     </td>
                 </tr>
             </table>
