Avance de tablas de ct y jugadores

--- a/Ventanas/equipo.html
+++ b/Ventanas/equipo.html
@@ -53,44 +53,146 @@
     </div>
 
     <div id="ct_equipo">
-        <h1>NUESTRA PLANTILLA</h1>
+        <h1 class="titulo_plantilla">NUESTRA PLANTILLA</h1>
         <div>
-            <h2>NUESTRO CUERPO TÉCNICO</h2>
-            <table>
-                <tr class="col_ct">
-
-
-                    <table id="tabla_ct">
-                        <thead>
-                            <tr>
-                                <th>
-                                    NOMBRE
-                                </th>
-                                <th>
-                                    POSICIÓN
-                                </th>
-                                <th>
-                                    EDAD
-                                </th>
-                                <th>
-                                    NAC.
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr class="fila_dt">
-                                <td>Marcelo Gallardo</td>
-                                <td>Director Técnico</td>
-                                <td>46</td>
-                                <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-
-                </tr>
+            <h4 class="subtitulo_plantilla">NUESTRO CUERPO TÉCNICO: </h4>
+            <table id="tabla_ct">
+                <thead>
+                    <tr>
+                        <th class="fila_ct_pos">
+                            NOMBRE
+                        </th>
+                        <th class="fila_ct_pos">
+                            POSICIÓN
+                        </th>
+                        <th class="fila_ct">
+                            EDAD
+                        </th>
+                        <th class="fila_ct">
+                            NAC.
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="fila_ct_personas">
+                        <td>Marcelo Gallardo</td>
+                        <td>Director Técnico</td>
+                        <td>46</td>
+                        <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    </tr>
+                    <tr class="fila_ct_personas">
+                        <td>Matías Biscay</td>
+                        <td>Segundo Entrenador</td>
+                        <td>49</td>
+                        <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    </tr>
+                    <tr class="fila_ct_personas">
+                        <td>Hernán Buján</td>
+                        <td>Segundo Entrenador</td>
+                        <td>47</td>
+                        <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    </tr>
+                    <tr class="fila_ct_personas">
+                        <td>Marcelo Tulbovitz</td>
+                        <td>Preparador Físico</td>
+                        <td>60</td>
+                        <td><img src="../Assets/Images/uruguay.png" class="img_tabla_ct"></td>
+                    </tr>
+                    <tr class="fila_ct_personas">
+                        <td>César Zinelli</td>
+                        <td>Preparador Físico</td>
+                        <td>46</td>
+                        <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    </tr>
+                </tbody>
             </table>
         </div>
+    </div>
+
+    <div id="jugadores_equipo">
+        <h4 class="subtitulo_jugadores">NUESTROS JUGADORES: </h4>
+        <table id="tabla_jugadores">
+            <thead>
+                <tr>
+                    <th class="fila_jugadores_s">
+                        #
+                    </th>
+                    <th class="fila_jugadores_l">
+                        NOMBRE
+                    </th>
+                    <th class="fila_jugadores_m">
+                        POSICIÓN
+                    </th>
+                    <th class="fila_jugadores_s">
+                        EDAD
+                    </th>
+                    <th class="fila_jugadores_s">
+                        NAC.
+                    </th>
+                    <th class="fila_jugadores_m">
+                        ALTURA
+                    </th>
+                    <th class="fila_jugadores_m">
+                        VALOR
+                    </th>
+                    <th class="fila_jugadores_m">
+                        CONVOCATORIAS/JUGADOS 21/22
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_arquero">1</td>
+                    <td>Franco Armani</td>
+                    <td>Arquero</td>
+                    <td>35</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,89 m</td>
+                    <td>5.00 mill. €</td>
+                    <td>20/17</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_arquero">33</td>
+                    <td>Ezequiel Centurión</td>
+                    <td>Arquero</td>
+                    <td>24</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,84 m</td>
+                    <td>300 mil €</td>
+                    <td>19/1</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_arquero">12</td>
+                    <td>Franco Petroli</td>
+                    <td>Arquero</td>
+                    <td>23</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,87 m</td>
+                    <td>50 mil €</td>
+                    <td>6/-</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_defensor">17</td>
+                    <td>Paulo Díaz</td>
+                    <td>Central</td>
+                    <td>27</td>
+                    <td><img src="../Assets/Images/chile.png" class="img_tabla_ct"></td>
+                    <td>1,78 m</td>
+                    <td>7.00 mill €</td>
+                    <td>18/14</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_defensor">6</td>
+                    <td>David Martínez</td>
+                    <td>Central</td>
+                    <td>24</td>
+                    <td><img src="../Assets/Images/paraguay.png" class="img_tabla_ct"></td>
+                    <td>1,85 m</td>
+                    <td>6.50 mill €</td>
+                    <td>15/12</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
 </body>
