Finalizada tabla jugadores

--- a/Ventanas/equipo.html
+++ b/Ventanas/equipo.html
@@ -149,7 +149,7 @@
                     <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
                     <td>1,89 m</td>
                     <td>5.00 mill. €</td>
-                    <td>20/17</td>
+                    <td>21/18</td>
                 </tr>
                 <tr class="fila_jugadores">
                     <td class="dorsal_arquero">33</td>
@@ -159,7 +159,7 @@
                     <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
                     <td>1,84 m</td>
                     <td>300 mil €</td>
-                    <td>19/1</td>
+                    <td>21/2</td>
                 </tr>
                 <tr class="fila_jugadores">
                     <td class="dorsal_arquero">12</td>
@@ -169,7 +169,7 @@
                     <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
                     <td>1,87 m</td>
                     <td>50 mil €</td>
-                    <td>6/-</td>
+                    <td>7/-</td>
                 </tr>
                 <tr class="fila_jugadores">
                     <td class="dorsal_defensor">17</td>
@@ -189,10 +189,229 @@
                     <td><img src="../Assets/Images/paraguay.png" class="img_tabla_ct"></td>
                     <td>1,85 m</td>
                     <td>6.50 mill €</td>
-                    <td>15/12</td>
+                    <td>17/14</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_defensor">14</td>
+                    <td>Leandro González Pírez</td>
+                    <td>Central</td>
+                    <td>30</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,86 m</td>
+                    <td>1.70 mill €</td>
+                    <td>22/9</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_defensor">23</td>
+                    <td>Emanuel Mammana</td>
+                    <td>Central</td>
+                    <td>26</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,83 m</td>
+                    <td>1.50 mill €</td>
+                    <td>20/4</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_defensor">4</td>
+                    <td>Jonatan Maidana</td>
+                    <td>Central</td>
+                    <td>36</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,85 m</td>
+                    <td>175 mil €</td>
+                    <td>17/3</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_defensor">22</td>
+                    <td>Javier Pinola</td>
+                    <td>Central</td>
+                    <td>39</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,80 m</td>
+                    <td>175 mil €</td>
+                    <td>15/2</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_defensor">29</td>
+                    <td>Elías Gómez</td>
+                    <td>Lateral</td>
+                    <td>27</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,74 m</td>
+                    <td>3.20 mill €</td>
+                    <td>22/10</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_defensor">20</td>
+                    <td>Milton Casco</td>
+                    <td>Lateral</td>
+                    <td>34</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,69 m</td>
+                    <td>2.00 mill €</td>
+                    <td>21/17</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_defensor">15</td>
+                    <td>Andrés Herrera</td>
+                    <td>Lateral</td>
+                    <td>23</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,78 m</td>
+                    <td>3.20 mill €</td>
+                    <td>21/11</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_mediocampista">5</td>
+                    <td>Bruno Zuculini</td>
+                    <td>Mediocentro</td>
+                    <td>29</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,82 m</td>
+                    <td>2.00 mill €</td>
+                    <td>21/16</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_mediocampista">24</td>
+                    <td>Enzo Pérez</td>
+                    <td>Mediocentro</td>
+                    <td>36</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,79 m</td>
+                    <td>2.00 mill €</td>
+                    <td>19/16</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_mediocampista">13</td>
+                    <td>Enzo Fernández</td>
+                    <td>Mediocentro</td>
+                    <td>21</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,80 m</td>
+                    <td>15.00 mill €</td>
+                    <td>21/11</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_mediocampista">11</td>
+                    <td>Nicolás de la Cruz</td>
+                    <td>Mediocentro Ofensivo</td>
+                    <td>25</td>
+                    <td><img src="../Assets/Images/uruguay.png" class="img_tabla_ct"></td>
+                    <td>1,67 m</td>
+                    <td>13.00 mill €</td>
+                    <td>21/20</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_mediocampista">32</td>
+                    <td>Tomás Pochettino</td>
+                    <td>Mediocentro</td>
+                    <td>26</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,80 m</td>
+                    <td>3.90 mill €</td>
+                    <td>20/12</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_mediocampista">26</td>
+                    <td>José Paradela</td>
+                    <td>Mediocentro</td>
+                    <td>23</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,80 m</td>
+                    <td>1.30 mill €</td>
+                    <td>19/10</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_mediocampista">5</td>
+                    <td>Agustín Palavecino</td>
+                    <td>Mediocentro Ofensivo</td>
+                    <td>25</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,79 m</td>
+                    <td>6.00 mill €</td>
+                    <td>19/16</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_mediocampista">10</td>
+                    <td>Juan Fernando Quintero</td>
+                    <td>Mediocentro Ofensivo</td>
+                    <td>29</td>
+                    <td><img src="../Assets/Images/colombia.png" class="img_tabla_ct"></td>
+                    <td>1,69 m</td>
+                    <td>5.00 mill €</td>
+                    <td>13/12</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_delantero">21</td>
+                    <td>Esequiel Barco</td>
+                    <td>Extremo</td>
+                    <td>23</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,67 m</td>
+                    <td>10.00 mill €</td>
+                    <td>17/16</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_delantero">31</td>
+                    <td>Santiago Simón</td>
+                    <td>Extremo</td>
+                    <td>19</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,81 m</td>
+                    <td>6.00 mill €</td>
+                    <td>21/19</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_delantero">9</td>
+                    <td>Julián Álvarez</td>
+                    <td>Delantero</td>
+                    <td>22</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,70 m</td>
+                    <td>23.00 mill €</td>
+                    <td>21/17</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_delantero">7</td>
+                    <td>Matías Suárez</td>
+                    <td>Delantero</td>
+                    <td>34</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,83 m</td>
+                    <td>3.00 mill €</td>
+                    <td>12/10</td>
+                </tr>
+                <tr class="fila_jugadores">
+                    <td class="dorsal_delantero">19</td>
+                    <td>Brian Romero</td>
+                    <td>Delantero</td>
+                    <td>30</td>
+                    <td><img src="../Assets/Images/argentina.png" class="img_tabla_ct"></td>
+                    <td>1,73 m</td>
+                    <td>4.00 mill €</td>
+                    <td>20/14</td>
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div class="footer_light_equipo">
+        <div class="redes">
+            <ul class="listaRedes">
+                <li class="nombreRedes">
+                    <h1 class="tituloFooter">WE, TOGETHER</h1>
+                </li>
+                <li class="itemRedes">
+                    <a href="mailto:jeremiassappia@gmail.com"><img class="imgMail" src="../Assets/Images/mail.png" /></a>
+                </li>
+                <li class="itemRedes">
+                    <a href="https://github.com/sappiajeremias" target="_blank"><img class="imgGit" src="../assets/images/git.jpg" /></a>
+                </li>
+                <li class="itemRedes">
+                    <a href="https://www.linkedin.com/in/jeremias-sappia-a83028214/" target="_blank"><img class="imglinkedin" src="../assets/images/linkedin.png" /></a>
+                </li>
+            </ul>
+        </div>
     </div>
 
 </body>
