Comienzo de pagina de posiciones

--- a/Ventanas/equipo.html
+++ b/Ventanas/equipo.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Joan&family=PT+Serif:ital,wght@1,700&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body id="top" class="body_light">
@@ -21,13 +21,13 @@
                 </li>
                 <li class="item_links">
                     <!--Link al equipo-->
-                    <a href="" class="underline_links">
+                    <a href="#top" class="underline_links">
                         <p class="nav_text">EQUIPO</p>
                     </a>
                 </li>
                 <li class="item_links">
                     <!--Link a las posiciones-->
-                    <a href="" class="underline_links">
+                    <a href="posicion.html" class="underline_links">
                         <p class="nav_text">POSICION</p>
                     </a>
                 </li>
@@ -114,28 +114,28 @@
         <table id="tabla_jugadores">
             <thead>
                 <tr>
-                    <th class="fila_jugadores_s">
+                    <th class="fila_s">
                         #
                     </th>
-                    <th class="fila_jugadores_l">
+                    <th class="fila_l">
                         NOMBRE
                     </th>
-                    <th class="fila_jugadores_m">
+                    <th class="fila_m">
                         POSICIÓN
                     </th>
-                    <th class="fila_jugadores_s">
+                    <th class="fila_s">
                         EDAD
                     </th>
-                    <th class="fila_jugadores_s">
+                    <th class="fila_s">
                         NAC.
                     </th>
-                    <th class="fila_jugadores_m">
+                    <th class="fila_m">
                         ALTURA
                     </th>
-                    <th class="fila_jugadores_m">
+                    <th class="fila_m">
                         VALOR
                     </th>
-                    <th class="fila_jugadores_m">
+                    <th class="fila_m">
                         CONVOCATORIAS/JUGADOS 21/22
                     </th>
                 </tr>
