--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@1,700&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Joan&family=PT+Serif:ital,wght@1,700&family=Red+Hat+Mono:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body id="top" class="body_light">
@@ -27,7 +27,7 @@
                 </li>
                 <li class="item_links">
                     <!--Link a las posiciones-->
-                    <a href="" class="underline_links">
+                    <a href="Ventanas/posicion.html" class="underline_links">
                         <p class="nav_text">POSICION</p>
                     </a>
                 </li>
